--- a/front/CUBE_front/code/index.html
+++ b/front/CUBE_front/code/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Куб Сайт</title>
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    
+    <div class="cube-container">
+        <div class="side" id="side1">1</div>
+        <div class="side" id="side2">2</div>
+        <div class="side" id="side3">3</div>
+        <div class="side" id="side4">4</div>
+        <div class="side" id="side5">5</div>
+        <div class="side" id="side6">6</div>
+    </div>
+
+    <script src="./js/app.js"></script>
 </body>
 </html>
